--- a/DnB.ioc
+++ b/DnB.ioc
@@ -30,32 +30,35 @@ KeepUserPlacement=false
 Mcu.CPN=STM32F446RET6
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM1
-Mcu.IP5=TIM2
-Mcu.IP6=TIM3
-Mcu.IP7=TIM9
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM1
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=TIM9
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PC6
-Mcu.Pin11=PC7
-Mcu.Pin12=PA8
-Mcu.Pin13=PA9
-Mcu.Pin14=PA10
-Mcu.Pin15=PA11
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14
-Mcu.Pin18=PB3
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin10=PA8
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA11
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB3
+Mcu.Pin17=PB4
+Mcu.Pin18=PB5
+Mcu.Pin19=PB8
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin20=PB9
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM9_VS_ClockSourceINT
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PA0-WKUP
@@ -63,7 +66,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA5
-Mcu.PinsNb=22
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -135,6 +138,24 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=E2A
+PB4.Locked=true
+PB4.Signal=S_TIM3_CH1
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=E2B
+PB5.Locked=true
+PB5.Signal=S_TIM3_CH2
+PB8.GPIOParameters=GPIO_Speed
+PB8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PB8.Locked=true
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.GPIOParameters=GPIO_Speed
+PB9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PB9.Locked=true
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -146,14 +167,6 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=E2A
-PC6.Locked=true
-PC6.Signal=S_TIM3_CH1
-PC7.GPIOParameters=GPIO_Label
-PC7.GPIO_Label=E2B
-PC7.Locked=true
-PC7.Signal=S_TIM3_CH2
 PH0-OSC_IN.Locked=true
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
@@ -180,19 +193,19 @@ ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=
+ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=DnB.ioc
 ProjectManager.ProjectName=DnB
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=CMake
+ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
-ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM9_Init-TIM9-false-HAL-true
+ProjectManager.UnderRoot=true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM9_Init-TIM9-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
